# snapcrop

./: Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
examples/: run.sh
src/: main.rs
