[package]
name = "snapcrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
blake3 = "1.4.1"
clap = { version = "4.3.19", features = ["derive"] }
fast_image_resize = "2.7.3"
image = "0.24.6"
indicatif = {version = "0.17.6", features = ["rayon"]}
log = "0.4.19"
nom = "7.1.3"
rayon = "1.7.0"
simplelog = "0.12.1"

[profile.release]
lto = true
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]
